# Rust-Monster

./: Cargo.toml  README.md
src/: character_commands.pest  command_words.rs  dice.rs  discord.rs  lookup.rs  main.rs  omni.rs  omni_commands.pest  setup.rs
src/omni/: character.rs  discord.rs
src/omni/character/: effect.rs  stat.rs
