[package]
name = "rust-monster"
version = "0.1.0"
authors = ["thecraiggers <thecraiggers@chaoslogic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
twilight-command-parser = "0.3"
twilight-embed-builder = "0.3"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
time = "0.2.25"
anyhow = "1.0"