[package]
name = "rust-monster"
version = "0.1.0"
authors = ["thecraiggers <thecraiggers@chaoslogic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.4"
twilight-gateway = "0.4"
twilight-http = "0.4"
twilight-model = "0.4"
twilight-command-parser = "0.4"
twilight-embed-builder = "0.4"
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
convert_case = "0.4.0"
roll-rs = "0.3.0"
pest = "2.0"
pest_derive = "2.0"

[dependencies.time]
version = "0.2.25"
features = ["serde"]